@@ -49,6 +49,7 @@ COBJS	=	\
 		$(LIBOBJS) \
 		cupsfilter.o \
 		cups-deviced.o \
+		cups-exec.o \
 		cups-lpd.o \
 		cups-polld.o \
 		testdirsvc.o \
@@ -73,17 +74,18 @@ UNITTARGETS =	\
 		testspeed \
 		testsub
 
-DAEMONS =	\
+PROGRAMS =	\
 		cupsd \
 		cupsfilter \
 		cups-deviced \
 		cups-driverd \
+		cups-exec \
 		cups-lpd \
 		cups-polld
 
 TARGETS	=	\
 		$(LIBTARGETS) \
-		$(DAEMONS)
+		$(PROGRAMS)
 
 
 #
@@ -222,6 +224,7 @@ install-exec:
 	$(INSTALL_DIR) -m 755 $(SERVERBIN)/daemon
 	$(INSTALL_BIN) cups-deviced $(SERVERBIN)/daemon
 	$(INSTALL_BIN) cups-driverd $(SERVERBIN)/daemon
+	$(INSTALL_BIN) cups-exec $(SERVERBIN)/daemon
 	$(INSTALL_BIN) cups-lpd $(SERVERBIN)/daemon
 	$(INSTALL_BIN) cups-polld $(SERVERBIN)/daemon
 	if test "x$(SYMROOT)" != "x"; then \
@@ -279,6 +282,7 @@ uninstall:
 	$(RM) $(SBINDIR)/cupsfilter
 	$(RM) $(SERVERBIN)/daemon/cups-deviced
 	$(RM) $(SERVERBIN)/daemon/cups-driverd
+	$(RM) $(SERVERBIN)/daemon/cups-exec
 	$(RM) $(SERVERBIN)/daemon/cups-lpd
 	$(RM) $(SERVERBIN)/daemon/cups-polld
 	$(RM) $(BUILDROOT)/System/Library/Printers/Libraries/convert
@@ -414,6 +418,15 @@ cups-driverd:	cups-driverd.o util.o ../cups/$(LIBCUPS) ../ppdc/$(LIBCUPSPPDC)
 	echo Linking $@...
 	$(CXX) $(LDFLAGS) -o cups-driverd cups-driverd.o util.o \
 		-L../ppdc -lcupsppdc $(LIBS)
+
+
+#
+# Make the sandbox execution helper, "cups-exec".
+#
+
+cups-exec:	cups-exec.o
+	echo Linking $@...
+	$(CC) $(LDFLAGS) -o cups-exec cups-exec.o $(LIBS)
 
 
 #
